<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/listItemImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/listItemIndex"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/listItemImage"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:text="" />

    <TextView
        android:id="@+id/listItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/listItemIndex"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:text="" />
</RelativeLayout>