...
            android:layout_height="54dp"
            android:text=""
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteY="62dp"
...
            android:id="@+id/buttonCancel"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:text="Cancel"
            tools:layout_editor_absoluteY="371dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_alignTop="@+id/buttonOk"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/buttonOk"
            android:layout_toStartOf="@+id/buttonOk" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:text="OK"
            tools:layout_editor_absoluteY="371dp"
            tools:layout_editor_absoluteX="191dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="162dp" />
...
